# MyTrade

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  audit-report.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json  requirements.txt
backend/src/: config.py  constants.py  main.py
backend/src/agents/: claim_extractor.py  fundamental.py
backend/src/dependencies/: admin.py  auth.py  error_handler.py  rate_limit.py  request_context.py
backend/src/routes/: analysis.py  claims.py  data.py  health.py  helpers.py  policy.py  system.py  trades.py  verification.py
backend/src/services/: alpaca_paper.py  alpha_vantage.py  (+20 more)
backend/tests/: conftest.py  helpers.py  test_admin_dependency.py  test_alpha_vantage.py  test_analysis_route.py  test_broker_adapter.py  test_budget_manager.py  test_circuit_breaker.py  test_claim_extraction.py  test_claim_extractor.py  test_claims_get.py  test_claims_route.py  test_config.py  test_data_collector.py  test_data_routes.py  test_error_handler.py  test_finnhub.py  test_fundamental_agent.py  test_fundamental_analysis.py  test_get_analysis.py  test_graceful_shutdown.py  test_health.py  test_kill_switch.py  test_llm_json_repair.py  test_monitoring.py  test_policy_engine.py  test_policy_route.py  test_policy_settings.py  test_policy_settings_service.py  test_provider_rate_limiter.py  test_request_context.py  test_retry.py  test_route_helpers.py  test_stop_loss_flow.py  test_supabase_retry.py  test_system_route.py  test_trade_execution.py  test_trades_route.py  test_verification.py  test_verification_route.py
(+133 files in other folders)
